--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "http://bukaro8.github.io/developer-portfolio",
+{ "homepage": "http://vicdev.uk",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
