--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "http://vicdev.uk",
+{
+  "homepage": "http://vicdev.uk",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -10,13 +11,14 @@
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
