--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://vicdev.uk",
+  "homepage": "https://vhdev.uk/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
