--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vhdev.uk/",
+  "homepage": "https://bukaro8.github.io/developer-portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
